--- a/moneyapp/index.html
+++ b/moneyapp/index.html
@@ -13,7 +13,20 @@
 
   <body>
     <header>
-      <nav></nav>
+      <h1>Money Monitor</h1>
+      <nav>
+        <ul class="nav__links">
+          <li>
+            <a href="#">Actions</a>
+          </li>
+          <li>
+            <a href="#">Wallet</a>
+          </li>
+          <li>
+            <a href="#s">Statistics</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <section>
       <div class="container">
